--- a/.github/workflows/ci_move_deprecated_notebooks.yml
+++ b/.github/workflows/ci_move_deprecated_notebooks.yml
@@ -12,38 +12,131 @@ jobs:
   move-deprecated-notebooks:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ inputs.python-version }}
-
-      - name: Move Deprecated Notebooks
+      - name: Set up Git
         run: |
-          echo "Scanning for deprecated notebooks..."
-          
-          # Create target archive folder if it doesn't exist
-          mkdir -p notebooks/deprecated
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-          # Move any notebooks containing 'deprecated: true' in their metadata
-          for notebook in $(find notebooks/ -name '*.ipynb'); do
-            if grep -q '"deprecated": true' "$notebook"; then
-              echo "Deprecating notebook: $notebook"
-              mv "$notebook" notebooks/deprecated/
+      - name: Identify and Remove Expired Notebooks
+        run: |
+          CURRENT_DATE=$(date -u +"%Y-%m-%d")
+          echo "Current UTC Date: $CURRENT_DATE"
+
+          # Always work from fresh state
+          git fetch origin
+
+          #####
+          # MAIN BRANCH
+          #####
+          echo "Checking out main branch..."
+          git checkout main
+          git pull origin main
+
+          # Track if any changes happened
+          TOC_CHANGED=false
+          NOTEBOOKS_REMOVED=false
+
+          for nb in $(find notebooks/ -name '*.ipynb'); do
+            REMOVAL_DATE=$(jq -r '.metadata.deprecated.removal_date // empty' "$nb")
+
+            if [[ ! -z "$REMOVAL_DATE" && "$REMOVAL_DATE" < "$CURRENT_DATE" ]]; then
+              echo "Notebook expired: $nb"
+              
+              # 1. Remove from main
+              git rm "$nb"
+              NOTEBOOKS_REMOVED=true
+
+              # 2. Remove from ./_toc.yml
+              TOC_ENTRY="${nb%.ipynb}"
+              echo "Removing $TOC_ENTRY from ./_toc.yml"
+              grep -v "^- file: $TOC_ENTRY$" ./_toc.yml > temp.yml && mv temp.yml ./_toc.yml
+              TOC_CHANGED=true
+
+              # Export path to a file to use in other branches later
+              echo "$nb" >> expired_notebooks.txt
             fi
           done
 
-          echo "Completed moving deprecated notebooks."
+          if [[ "$NOTEBOOKS_REMOVED" == "true" ]]; then
+            git add notebooks/
+          fi
 
-      - name: Commit and Push Changes
+          if [[ "$TOC_CHANGED" == "true" ]]; then
+            git add ./_toc.yml
+          fi
+
+          if [[ "$NOTEBOOKS_REMOVED" == "true" || "$TOC_CHANGED" == "true" ]]; then
+            git commit -m "Removed expired notebooks and updated _toc.yml"
+            git push origin main
+          else
+            echo "No expired notebooks found on main branch."
+          fi
+
+      - name: Remove from gh-storage branch
+        if: success()
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          if [[ -f expired_notebooks.txt ]]; then
+            echo "Checking out gh-storage branch..."
+            git checkout gh-storage
+            git pull origin gh-storage
 
-          git add notebooks/deprecated/
-          git commit -m "Moved deprecated notebooks to archive folder" || echo "No changes to commit."
-          git push
+            while read -r nb; do
+              echo "Removing $nb from gh-storage..."
+              git rm -f "$nb" || echo "File $nb not found in gh-storage."
+            done < expired_notebooks.txt
+
+            git commit -m "Removed expired notebooks from gh-storage" || echo "No changes to commit."
+            git push origin gh-storage
+          else
+            echo "No expired notebooks to process for gh-storage."
+          fi
+
+      - name: Remove from gh-pages branch (HTML)
+        if: success()
+        run: |
+          if [[ -f expired_notebooks.txt ]]; then
+            echo "Checking out gh-pages branch..."
+            git checkout gh-pages
+            git pull origin gh-pages
+
+            while read -r nb; do
+              # Convert .ipynb to .html path
+              HTML_PATH="${nb%.ipynb}.html"
+              echo "Removing $HTML_PATH from gh-pages..."
+              git rm -f "$HTML_PATH" || echo "File $HTML_PATH not found in gh-pages."
+            done < expired_notebooks.txt
+
+            git commit -m "Removed expired notebooks from gh-pages" || echo "No changes to commit."
+            git push origin gh-pages
+          else
+            echo "No expired notebooks to process for gh-pages."
+          fi
+
+      - name: Move to deprecated branch
+        if: success()
+        run: |
+          if [[ -f expired_notebooks.txt ]]; then
+            echo "Checking out deprecated branch..."
+            if git show-ref --quiet refs/heads/deprecated; then
+              git checkout deprecated
+              git pull origin deprecated
+            else
+              git checkout -b deprecated
+            fi
+
+            while read -r nb; do
+              # Re-checkout the last copy from origin/main to preserve the file
+              git checkout origin/main -- "$nb" || echo "Could not restore $nb from main."
+              git add "$nb"
+            done < expired_notebooks.txt
+
+            git commit -m "Archived expired notebooks to deprecated branch" || echo "No changes to commit."
+            git push origin deprecated
+          else
+            echo "No expired notebooks to move to deprecated branch."
+          fi
