--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -131,174 +131,141 @@ jobs:
 
 
 
-
   validate-and-execute:
-    needs: detect-changes
-    runs-on: ubuntu-latest
-    if: ${{ needs.detect-changes.outputs.notebooks_json != '[]' }}
-    strategy:
-      matrix:
-        notebook: ${{ fromJson(needs.detect-changes.outputs.notebooks_json) }}
-      fail-fast: false
-      max-parallel: 4
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ inputs.python-version }}
+      needs: detect-changes
+      runs-on: ubuntu-latest
+      if: ${{ needs.detect-changes.outputs.notebooks_json != '[]' }}
+      strategy:
+        matrix:
+          notebook: ${{ fromJson(needs.detect-changes.outputs.notebooks_json) }}
+        fail-fast: false
+        max-parallel: 4
+    
+      steps:
+        - uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
+    
+        - name: Set up Python
+          uses: actions/setup-python@v5
+          with:
+            python-version: ${{ inputs.python-version }}
+    
+        - name: Set up Conda Environment
+          if: inputs.use-conda == true
+          shell: bash -l {0}
+          run: |
+            echo "Setting up Conda environment..."
+            conda --version
+            ENV_NAME="ci_env"
+            conda create -n $ENV_NAME python=${{ inputs.python-version }} -y
+    
+            if [[ -n "${{ inputs.conda-environment-file }}" ]]; then
+              conda env update -n $ENV_NAME -f "${{ inputs.conda-environment-file }}"
+            elif [[ -n "${{ inputs.conda-packages }}" ]]; then
+              conda install -n $ENV_NAME -c conda-forge $(echo "${{ inputs.conda-packages }}" | tr ',' ' ') -y
+            else
+              echo "No extra conda packages specified."
+            fi
+    
+        - name: Install Base Dependencies
+          run: |
+            pip install jupyter nbval nbconvert bandit
+    
+        - name: Install Local Requirements
+          shell: bash -l {0}
+          run: |
+            set -e
+            NOTEBOOK="${{ matrix.notebook }}"
+            REQFILE="$(dirname "$NOTEBOOK")/requirements.txt"
+    
+            if [ "${{ inputs.use-conda }}" == "true" ]; then
+              echo "🔧 Activating Conda environment before installing requirements..."
+              source /usr/share/miniconda/etc/profile.d/conda.sh
+              conda activate ci_env
+            else
+              echo "🐍 Using system Python."
+            fi
+    
+            echo "🔍 Checking for $REQFILE..."
+            if [ -f "$REQFILE" ]; then
+              echo "📦 Installing local requirements from $REQFILE"
+              pip install -r "$REQFILE"
+            else
+              echo "❌ ERROR: requirements.txt not found for notebook $NOTEBOOK"
+              exit 1
+            fi
+    
+        - name: Validate Notebook
+          shell: bash -l {0}
+          run: |
+            set -e
+            NOTEBOOK="${{ matrix.notebook }}"
+    
+            if [ "${{ inputs.use-conda }}" == "true" ]; then
+              echo "🔧 Activating Conda environment for validation..."
+              source /usr/share/miniconda/etc/profile.d/conda.sh
+              conda activate ci_env
+            else
+              echo "🐍 Using system Python for validation."
+            fi
+    
+            echo "✅ Clearing outputs and validating notebook: $NOTEBOOK"
+            jupyter nbconvert --clear-output --inplace "$NOTEBOOK"
+            pytest --nbval --nbval-cell-timeout=4000 "$NOTEBOOK"
+    
+        - name: Execute Notebook
+          shell: bash -l {0}
+          run: |
+            set -e
+            NOTEBOOK="${{ matrix.notebook }}"
+    
+            if [ "${{ inputs.use-conda }}" == "true" ]; then
+              echo "🔧 Activating Conda environment for execution..."
+              source /usr/share/miniconda/etc/profile.d/conda.sh
+              conda activate ci_env
+            else
+              echo "🐍 Using system Python for execution."
+            fi
+    
+            echo "🚀 Executing notebook: $NOTEBOOK"
+            if ! jupyter nbconvert --to notebook --execute --inplace "$NOTEBOOK"; then
+              echo "⚠️ Notebook execution failed — inserting failure marker."
+              python .github/scripts/insert_failure_message.py "$NOTEBOOK"
+            fi
+    
+        - name: Security Scan Notebook
+          if: inputs.security-scan == true
+          run: |
+            set -e
+            NOTEBOOK="${{ matrix.notebook }}"
+            PYTHON_SCRIPT="${NOTEBOOK%.ipynb}.py"
+    
+            echo "🔍 Converting $NOTEBOOK to script for Bandit scan..."
+            jupyter nbconvert --to script "$NOTEBOOK"
+            bandit "$PYTHON_SCRIPT"
+    
+        - name: Upload Notebook if Failure
+          if: failure()
+          run: |
+            set -e
+            NOTEBOOK="${{ matrix.notebook }}"
+            SAFE_NOTEBOOK_NAME=$(echo "$NOTEBOOK" | sed 's#/#__#g')
+            echo "Uploading failed notebook: $NOTEBOOK (artifact name: failed-$SAFE_NOTEBOOK_NAME)"
         
-    - name: Set up Conda Environment
-      if: inputs.use-conda == true
-      shell: bash -l {0}
-      run: |
-        echo "Setting up Conda environment..."
+            echo "::set-output name=safe-name::failed-$SAFE_NOTEBOOK_NAME"
+            echo "::set-output name=path::$NOTEBOOK"
+            
+        - name: Upload Failed Notebook Artifact
+          if: failure()
+          uses: actions/upload-artifact@v4
+          with:
+            name: ${{ steps.upload-failed.outputs.safe-name }}
+            path: ${{ steps.upload-failed.outputs.path }}
+
+
     
-        echo "Conda version:"
-        conda --version
-    
-        ENV_NAME="ci_env"
-        echo "Creating Conda environment $ENV_NAME with Python ${{ inputs.python-version }}"
-        conda create -n $ENV_NAME python=${{ inputs.python-version }} -y
-    
-        if [[ -n "${{ inputs.conda-environment-file }}" ]]; then
-          echo "Installing from environment file: ${{ inputs.conda-environment-file }}"
-          conda env update -n $ENV_NAME -f "${{ inputs.conda-environment-file }}"
-        elif [[ -n "${{ inputs.conda-packages }}" ]]; then
-          echo "Installing conda packages: ${{ inputs.conda-packages }}"
-          conda install -n $ENV_NAME -c conda-forge $(echo "${{ inputs.conda-packages }}" | tr ',' ' ') -y
-        else
-          echo "No extra packages specified."
-        fi
 
-
-
-
-
-    - name: Install Validation Dependencies
-      run: |
-        pip install jupyter nbval nbconvert bandit
-
-    - name: Install Local Requirements
-      run: |
-        ipynb_file="${{ matrix.notebook }}"
-        nb_dir=$(dirname "$ipynb_file")
-
-        if [ -f "$nb_dir/requirements.txt" ]; then
-          echo "Installing local requirements for $ipynb_file"
-          pip install -r "$nb_dir/requirements.txt"
-        else
-          echo "No local requirements.txt for $ipynb_file"
-        fi
-
-    - name: Validate Notebook
-      run: |
-        set -e  # Exit immediately on any error
-    
-        NOTEBOOK="${{ matrix.notebook }}"
-        REQFILE="$(dirname "$NOTEBOOK")/requirements.txt"
-    
-        if [ "${{ inputs.use-conda }}" == "true" ]; then
-          echo "🔧 Setting up Conda environment..."
-          
-          source /usr/share/miniconda/etc/profile.d/conda.sh
-          conda activate ci_env
-    
-          if [ -f "$REQFILE" ]; then
-            echo "📦 Installing notebook-specific requirements from $REQFILE"
-            pip install -r "$REQFILE"
-          else
-            echo "⚠️ No local requirements.txt found for $NOTEBOOK — skipping install"
-          fi
-        else
-          echo "🐍 Using system Python..."
-    
-          if [ -f "$REQFILE" ]; then
-            echo "📦 Installing notebook-specific requirements from $REQFILE"
-            pip install -r "$REQFILE"
-          else
-            echo "⚠️ No local requirements.txt found for $NOTEBOOK — skipping install"
-          fi
-        fi
-    
-        echo "✅ Validating notebook: $NOTEBOOK"
-        pytest --nbval --nbval-cell-timeout=4000 "$NOTEBOOK"
-      shell: /usr/bin/bash -l {0}
-
-
-
-    - name: Validate Notebook (No Conda)
-      if: inputs.use-conda != true
-      run: |
-        pytest --nbval --nbval-cell-timeout=4000 "${{ matrix.notebook }}"
-        
-    - name: Execute Notebook
-      run: |
-        set -e  # Stop on first failure
-    
-        NOTEBOOK="${{ matrix.notebook }}"
-        REQFILE="$(dirname "$NOTEBOOK")/requirements.txt"
-    
-        if [ "${{ inputs.use-conda }}" == "true" ]; then
-          echo "🔧 Setting up Conda environment..."
-    
-          source /usr/share/miniconda/etc/profile.d/conda.sh
-          conda activate ci_env
-    
-          if [ -f "$REQFILE" ]; then
-            echo "📦 Installing notebook-specific requirements from $REQFILE"
-            pip install -r "$REQFILE"
-          else
-            echo "⚠️ No local requirements.txt found for $NOTEBOOK — skipping install"
-          fi
-        else
-          echo "🐍 Using system Python..."
-    
-          if [ -f "$REQFILE" ]; then
-            echo "📦 Installing notebook-specific requirements from $REQFILE"
-            pip install -r "$REQFILE"
-          else
-            echo "⚠️ No local requirements.txt found for $NOTEBOOK — skipping install"
-          fi
-        fi
-    
-        echo "🚀 Executing notebook: $NOTEBOOK"
-        jupyter nbconvert --to notebook --execute --inplace "$NOTEBOOK"
-      shell: /usr/bin/bash -l {0}
-
-
-    - name: Execute Notebook (system Python)
-      run: |
-        echo "Installing requirements.txt using system pip..."
-        if [ -f requirements.txt ]; then
-          pip install -r requirements.txt
-        else
-          echo "No requirements.txt found — continuing without installs."
-        fi
-    
-        echo "Executing notebook: ${{ matrix.notebook }}"
-        jupyter nbconvert --to notebook --execute --inplace "${{ matrix.notebook }}"
-      shell: /usr/bin/bash -l {0}
-
-
-    - name: Security Scan Notebook
-      if: inputs.security-scan == true
-      run: |
-        ipynb_file="${{ matrix.notebook }}"
-        py_file="${ipynb_file%.ipynb}.py"
-        echo "Converting $ipynb_file to script for Bandit scan"
-        jupyter nbconvert --to script "$ipynb_file"
-        bandit "$py_file"
-
-    - name: Upload Notebook if Failure
-      if: failure()
-      uses: actions/upload-artifact@v4
-      with:
-        name: failed-${{ matrix.notebook }}
-        path: ${{ matrix.notebook }}
 
 
 
